changes from config2 branch. have to be tested
--HG--
branch : feature/microservices

--- a/services/web/translations/messages_js.pot
+++ b/services/web/translations/messages_js.pot
@@ -2629,7 +2629,7 @@ msgid "Anonymous"
 msgstr ""
 
 #: ui/web/main/desktop/HeaderPanel.js:41
-msgid "About NOC ..."
+msgid "About system ..."
 msgstr ""
 
 #: ui/web/main/desktop/HeaderPanel.js:48
