--- a/ui/web/translations/pt_BR.json
+++ b/ui/web/translations/pt_BR.json
@@ -22,9 +22,9 @@
         null,
         "AS ou AS-set"
     ],
-    "About NOC ...": [
+    "About system ...": [
         null,
-        "Sobre o NOC ..."
+        "Sobre o sistema ..."
     ],
     "Access": [
         null,
