--- a/ui/web/translations/ru.json
+++ b/ui/web/translations/ru.json
@@ -16,7 +16,7 @@
         "X-Poedit-Basepath": "micro/noc_bitbucket",
         "X-Poedit-SearchPath-0": "."
     },
-    "About NOC ...": [
+    "About system ...": [
         null,
         "О программе ..."
     ],
